--- a/scss/abstracts/variables/color/_variables.scss
+++ b/scss/abstracts/variables/color/_variables.scss
@@ -26,6 +26,18 @@ $colors: (
   'gray': $gray
 );
 
+// custom user color
+$customcolors: (
+  'yellow': --custom-dark-yellow,
+  'red': --custom-dark-red,
+  'blue': --custom-dark-blue,
+  'purple': --custom-dark-purple,
+  'green': --custom-dark-green,
+  'orange': --custom-dark-orange,
+  'primary': --custom-dark-primary,
+  'secondary': --custom-dark-secondary
+);
+
 $fullcolors: (
   'red': $red,
   'red-1': #fa1e1e,
