--- a/scss/classes/color/_dark.scss
+++ b/scss/classes/color/_dark.scss
@@ -3,150 +3,178 @@
 @use '../../abstracts/mixins/breakpoints/mixin' as *;
 
 // file for color classes - for minified omencss-color css
-@include initialColor(dark\:text-, color);
-@include initialColor(dark\:bg-, background-color);
-@include lightColor(dark\:text-, 1, 10, color, $colors);
-@include lightColor(dark\:bg-, 1, 10, background-color, $colors);
-@include lightColor(dark\:text-, 0, 0, color, $lightdark);
-@include lightColor(dark\:bg-, 0, 0, background-color, $lightdark);
-@include initialColor(dark\:accent-, accent-color);
-@include lightColor(dark\:accent-, 1, 10, accent-color, $colors);
-@include lightColor(dark\:accent-, 0, 0, accent-color, $lightdark);
-@include bggradient(dark\:);
-@include bggradient(dark\:, $lightdark);
-@include bgGradientToFrom(dark\:);
-@include lightColor(dark\:text-decoration-, 1, 10, text-decoration-color, $colors);
-@include lightColor(dark\:text-decoration-, 0, 0, text-decoration-color, $lightdark);
+@include initialColor(text-, color);
+@include initialColor(bg-, background-color);
+@include lightColor(text-, 1, 10, color, $colors);
+@include lightColor(bg-, 1, 10, background-color, $colors);
+@include lightColor(text-, 0, 0, color, $lightdark);
+@include lightColor(bg-, 0, 0, background-color, $lightdark);
+@include initialColor(accent-, accent-color);
+@include lightColor(accent-, 1, 10, accent-color, $colors);
+@include lightColor(accent-, 0, 0, accent-color, $lightdark);
+@include bggradient();
+@include bggradient('', $lightdark);
+@include bgGradientToFrom();
+@include lightColor(text-decoration-, 1, 10, text-decoration-color, $colors);
+@include lightColor(text-decoration-, 0, 0, text-decoration-color, $lightdark);
 // active and focus color classes
-@include lightColor(dark\:text-decoration-, 1, 10, text-decoration-color, $colors, active);
-@include lightColor(dark\:text-decoration-, 1, 10, text-decoration-color, $colors, focus);
-@include initialColor(dark\:text-, color, active);
-@include initialColor(dark\:text-, color, focus);
-@include initialColor(dark\:bg-, background-color, active);
-@include initialColor(dark\:bg-, background-color, focus);
-@include lightColor(dark\:text-, 1, 10, color, $colors, active);
-@include lightColor(dark\:text-, 1, 10, color, $colors, focus);
-@include lightColor(dark\:bg-, 1, 10, background-color, $colors, active);
-@include lightColor(dark\:bg-, 1, 10, background-color, $colors, focus);
-@include lightColor(dark\:text-, 0, 0, color, $lightdark, active);
-@include lightColor(dark\:text-, 0, 0, color, $lightdark, focus);
-@include lightColor(dark\:bg-, 0, 0, background-color, $lightdark, active);
-@include lightColor(dark\:bg-, 0, 0, background-color, $lightdark, focus);
-@include lightColor(dark\:accent-, 1, 10, accent-color, $colors, active);
-@include lightColor(dark\:accent-, 1, 10, accent-color, $colors, focus);
-@include lightColor(dark\:accent-, 0, 0, accent-color, $lightdark, active);
-@include lightColor(dark\:accent-, 0, 0, accent-color, $lightdark, focus);
-@include initialColor(dark\:accent-, accent-color, active);
-@include initialColor(dark\:accent-, accent-color, focus);
+@include lightColor(text-decoration-, 1, 10, text-decoration-color, $colors, active);
+@include lightColor(text-decoration-, 1, 10, text-decoration-color, $colors, focus);
+@include initialColor(text-, color, active);
+@include initialColor(text-, color, focus);
+@include initialColor(bg-, background-color, active);
+@include initialColor(bg-, background-color, focus);
+@include lightColor(text-, 1, 10, color, $colors, active);
+@include lightColor(text-, 1, 10, color, $colors, focus);
+@include lightColor(bg-, 1, 10, background-color, $colors, active);
+@include lightColor(bg-, 1, 10, background-color, $colors, focus);
+@include lightColor(text-, 0, 0, color, $lightdark, active);
+@include lightColor(text-, 0, 0, color, $lightdark, focus);
+@include lightColor(bg-, 0, 0, background-color, $lightdark, active);
+@include lightColor(bg-, 0, 0, background-color, $lightdark, focus);
+@include lightColor(accent-, 1, 10, accent-color, $colors, active);
+@include lightColor(accent-, 1, 10, accent-color, $colors, focus);
+@include lightColor(accent-, 0, 0, accent-color, $lightdark, active);
+@include lightColor(accent-, 0, 0, accent-color, $lightdark, focus);
+@include initialColor(accent-, accent-color, active);
+@include initialColor(accent-, accent-color, focus);
+// custom colors
+@include customColor('', text-, color);
+@include customColor('', bg-, background-color);
+@include customColor('', border-, border-color);
+@include customColor('', fill-, fill);
+@include customColor('', accent-, accent-color);
+@include customColor('', text-decoration-, text-decoration-color);
 
 @include sm {
-  @include initialColor(dark\:sm\:text-, color);
-  @include initialColor(dark\:sm\:bg-, background-color);
-  @include lightColor(dark\:sm\:text-, 1, 10, color, $colors);
-  @include lightColor(dark\:sm\:bg-, 1, 10, background-color, $colors);
-  @include lightColor(dark\:sm\:text-, 0, 0, color, $lightdark);
-  @include lightColor(dark\:sm\:bg-, 0, 0, background-color, $lightdark);
-  @include initialColor(dark\:sm\:accent-, accent-color);
-  @include lightColor(dark\:sm\:accent-, 1, 10, accent-color, $colors);
-  @include lightColor(dark\:sm\:accent-, 0, 0, accent-color, $lightdark);
-  @include bggradient(dark\:sm\:);
-  @include bggradient(dark\:sm\:, $lightdark);
-  @include bgGradientToFrom(dark\:sm\:);
-  @include lightColor(dark\:sm\:text-decoration-, 1, 10, text-decoration-color, $colors);
-  @include lightColor(dark\:sm\:text-decoration-, 0, 0, text-decoration-color, $lightdark);
+  @include initialColor(sm\:text-, color);
+  @include initialColor(sm\:bg-, background-color);
+  @include lightColor(sm\:text-, 1, 10, color, $colors);
+  @include lightColor(sm\:bg-, 1, 10, background-color, $colors);
+  @include lightColor(sm\:text-, 0, 0, color, $lightdark);
+  @include lightColor(sm\:bg-, 0, 0, background-color, $lightdark);
+  @include initialColor(sm\:accent-, accent-color);
+  @include lightColor(sm\:accent-, 1, 10, accent-color, $colors);
+  @include lightColor(sm\:accent-, 0, 0, accent-color, $lightdark);
+  @include bggradient(sm\:);
+  @include bggradient(sm\:, $lightdark);
+  @include bgGradientToFrom(sm\:);
+  @include lightColor(sm\:text-decoration-, 1, 10, text-decoration-color, $colors);
+  @include lightColor(sm\:text-decoration-, 0, 0, text-decoration-color, $lightdark);
   // active and focus color classes
-  @include lightColor(dark\:sm\:text-decoration-, 1, 10, text-decoration-color, $colors, active);
-  @include lightColor(dark\:sm\:text-decoration-, 1, 10, text-decoration-color, $colors, focus);
-  @include initialColor(dark\:sm\:text-, color, active);
-  @include initialColor(dark\:sm\:text-, color, focus);
-  @include initialColor(dark\:sm\:bg-, background-color, active);
-  @include initialColor(dark\:sm\:bg-, background-color, focus);
-  @include lightColor(dark\:sm\:text-, 1, 10, color, $colors, active);
-  @include lightColor(dark\:sm\:text-, 1, 10, color, $colors, focus);
-  @include lightColor(dark\:sm\:bg-, 1, 10, background-color, $colors, active);
-  @include lightColor(dark\:sm\:bg-, 1, 10, background-color, $colors, focus);
-  @include lightColor(dark\:sm\:text-, 0, 0, color, $lightdark, active);
-  @include lightColor(dark\:sm\:text-, 0, 0, color, $lightdark, focus);
-  @include lightColor(dark\:sm\:bg-, 0, 0, background-color, $lightdark, active);
-  @include lightColor(dark\:sm\:bg-, 0, 0, background-color, $lightdark, focus);
-  @include lightColor(dark\:sm\:accent-, 1, 10, accent-color, $colors, active);
-  @include lightColor(dark\:sm\:accent-, 1, 10, accent-color, $colors, focus);
-  @include lightColor(dark\:sm\:accent-, 0, 0, accent-color, $lightdark, active);
-  @include lightColor(dark\:sm\:accent-, 0, 0, accent-color, $lightdark, focus);
-  @include initialColor(dark\:sm\:accent-, accent-color, active);
-  @include initialColor(dark\:sm\:accent-, accent-color, focus);
+  @include lightColor(sm\:text-decoration-, 1, 10, text-decoration-color, $colors, active);
+  @include lightColor(sm\:text-decoration-, 1, 10, text-decoration-color, $colors, focus);
+  @include initialColor(sm\:text-, color, active);
+  @include initialColor(sm\:text-, color, focus);
+  @include initialColor(sm\:bg-, background-color, active);
+  @include initialColor(sm\:bg-, background-color, focus);
+  @include lightColor(sm\:text-, 1, 10, color, $colors, active);
+  @include lightColor(sm\:text-, 1, 10, color, $colors, focus);
+  @include lightColor(sm\:bg-, 1, 10, background-color, $colors, active);
+  @include lightColor(sm\:bg-, 1, 10, background-color, $colors, focus);
+  @include lightColor(sm\:text-, 0, 0, color, $lightdark, active);
+  @include lightColor(sm\:text-, 0, 0, color, $lightdark, focus);
+  @include lightColor(sm\:bg-, 0, 0, background-color, $lightdark, active);
+  @include lightColor(sm\:bg-, 0, 0, background-color, $lightdark, focus);
+  @include lightColor(sm\:accent-, 1, 10, accent-color, $colors, active);
+  @include lightColor(sm\:accent-, 1, 10, accent-color, $colors, focus);
+  @include lightColor(sm\:accent-, 0, 0, accent-color, $lightdark, active);
+  @include lightColor(sm\:accent-, 0, 0, accent-color, $lightdark, focus);
+  @include initialColor(sm\:accent-, accent-color, active);
+  @include initialColor(sm\:accent-, accent-color, focus);
+  // custom colors
+  @include customColor(sm\:, text-, color);
+  @include customColor(sm\:, bg-, background-color);
+  @include customColor(sm\:, border-, border-color);
+  @include customColor(sm\:, fill-, fill);
+  @include customColor(sm\:, accent-, accent-color);
+  @include customColor(sm\:, text-decoration-, text-decoration-color);
 }
 @include md {
-  @include initialColor(dark\:md\:text-, color);
-  @include initialColor(dark\:md\:bg-, background-color);
-  @include lightColor(dark\:md\:text-, 1, 10, color, $colors);
-  @include lightColor(dark\:md\:bg-, 1, 10, background-color, $colors);
-  @include lightColor(dark\:md\:text-, 0, 0, color, $lightdark);
-  @include lightColor(dark\:md\:bg-, 0, 0, background-color, $lightdark);
-  @include initialColor(dark\:md\:accent-, accent-color);
-  @include lightColor(dark\:md\:accent-, 1, 10, accent-color, $colors);
-  @include lightColor(dark\:md\:accent-, 0, 0, accent-color, $lightdark);
-  @include bggradient(dark\:md\:);
-  @include bggradient(dark\:md\:, $lightdark);
-  @include bgGradientToFrom(dark\:md\:);
-  @include lightColor(dark\:md\:text-decoration-, 1, 10, text-decoration-color, $colors);
-  @include lightColor(dark\:md\:text-decoration-, 0, 0, text-decoration-color, $lightdark);
+  @include initialColor(md\:text-, color);
+  @include initialColor(md\:bg-, background-color);
+  @include lightColor(md\:text-, 1, 10, color, $colors);
+  @include lightColor(md\:bg-, 1, 10, background-color, $colors);
+  @include lightColor(md\:text-, 0, 0, color, $lightdark);
+  @include lightColor(md\:bg-, 0, 0, background-color, $lightdark);
+  @include initialColor(md\:accent-, accent-color);
+  @include lightColor(md\:accent-, 1, 10, accent-color, $colors);
+  @include lightColor(md\:accent-, 0, 0, accent-color, $lightdark);
+  @include bggradient(md\:);
+  @include bggradient(md\:, $lightdark);
+  @include bgGradientToFrom(md\:);
+  @include lightColor(md\:text-decoration-, 1, 10, text-decoration-color, $colors);
+  @include lightColor(md\:text-decoration-, 0, 0, text-decoration-color, $lightdark);
   // active and focus color classes
-  @include lightColor(dark\:md\:text-decoration-, 1, 10, text-decoration-color, $colors, active);
-  @include lightColor(dark\:md\:text-decoration-, 1, 10, text-decoration-color, $colors, focus);
-  @include initialColor(dark\:md\:text-, color, active);
-  @include initialColor(dark\:md\:text-, color, focus);
-  @include initialColor(dark\:md\:bg-, background-color, active);
-  @include initialColor(dark\:md\:bg-, background-color, focus);
-  @include lightColor(dark\:md\:text-, 1, 10, color, $colors, active);
-  @include lightColor(dark\:md\:text-, 1, 10, color, $colors, focus);
-  @include lightColor(dark\:md\:bg-, 1, 10, background-color, $colors, active);
-  @include lightColor(dark\:md\:bg-, 1, 10, background-color, $colors, focus);
-  @include lightColor(dark\:md\:text-, 0, 0, color, $lightdark, active);
-  @include lightColor(dark\:md\:text-, 0, 0, color, $lightdark, focus);
-  @include lightColor(dark\:md\:bg-, 0, 0, background-color, $lightdark, active);
-  @include lightColor(dark\:md\:bg-, 0, 0, background-color, $lightdark, focus);
-  @include lightColor(dark\:md\:accent-, 1, 10, accent-color, $colors, active);
-  @include lightColor(dark\:md\:accent-, 1, 10, accent-color, $colors, focus);
-  @include lightColor(dark\:md\:accent-, 0, 0, accent-color, $lightdark, active);
-  @include lightColor(dark\:md\:accent-, 0, 0, accent-color, $lightdark, focus);
-  @include initialColor(dark\:md\:accent-, accent-color, active);
-  @include initialColor(dark\:md\:accent-, accent-color, focus);
+  @include lightColor(md\:text-decoration-, 1, 10, text-decoration-color, $colors, active);
+  @include lightColor(md\:text-decoration-, 1, 10, text-decoration-color, $colors, focus);
+  @include initialColor(md\:text-, color, active);
+  @include initialColor(md\:text-, color, focus);
+  @include initialColor(md\:bg-, background-color, active);
+  @include initialColor(md\:bg-, background-color, focus);
+  @include lightColor(md\:text-, 1, 10, color, $colors, active);
+  @include lightColor(md\:text-, 1, 10, color, $colors, focus);
+  @include lightColor(md\:bg-, 1, 10, background-color, $colors, active);
+  @include lightColor(md\:bg-, 1, 10, background-color, $colors, focus);
+  @include lightColor(md\:text-, 0, 0, color, $lightdark, active);
+  @include lightColor(md\:text-, 0, 0, color, $lightdark, focus);
+  @include lightColor(md\:bg-, 0, 0, background-color, $lightdark, active);
+  @include lightColor(md\:bg-, 0, 0, background-color, $lightdark, focus);
+  @include lightColor(md\:accent-, 1, 10, accent-color, $colors, active);
+  @include lightColor(md\:accent-, 1, 10, accent-color, $colors, focus);
+  @include lightColor(md\:accent-, 0, 0, accent-color, $lightdark, active);
+  @include lightColor(md\:accent-, 0, 0, accent-color, $lightdark, focus);
+  @include initialColor(md\:accent-, accent-color, active);
+  @include initialColor(md\:accent-, accent-color, focus);
+  // custom colors
+  @include customColor(md\:, text-, color);
+  @include customColor(md\:, bg-, background-color);
+  @include customColor(md\:, border-, border-color);
+  @include customColor(md\:, fill-, fill);
+  @include customColor(md\:, accent-, accent-color);
+  @include customColor(md\:, text-decoration-, text-decoration-color);
 }
 @include lg {
-  @include initialColor(dark\:lg\:text-, color);
-  @include initialColor(dark\:lg\:bg-, background-color);
-  @include lightColor(dark\:lg\:text-, 1, 10, color, $colors);
-  @include lightColor(dark\:lg\:bg-, 1, 10, background-color, $colors);
-  @include lightColor(dark\:lg\:text-, 0, 0, color, $lightdark);
-  @include lightColor(dark\:lg\:bg-, 0, 0, background-color, $lightdark);
-  @include initialColor(dark\:lg\:accent-, accent-color);
-  @include lightColor(dark\:lg\:accent-, 1, 10, accent-color, $colors);
-  @include lightColor(dark\:lg\:accent-, 0, 0, accent-color, $lightdark);
-  @include bggradient(dark\:lg\:);
-  @include bggradient(dark\:lg\:, $lightdark);
-  @include bgGradientToFrom(dark\:lg\:);
-  @include lightColor(dark\:lg\:text-decoration-, 1, 10, text-decoration-color, $colors);
-  @include lightColor(dark\:lg\:text-decoration-, 0, 0, text-decoration-color, $lightdark);
+  @include initialColor(lg\:text-, color);
+  @include initialColor(lg\:bg-, background-color);
+  @include lightColor(lg\:text-, 1, 10, color, $colors);
+  @include lightColor(lg\:bg-, 1, 10, background-color, $colors);
+  @include lightColor(lg\:text-, 0, 0, color, $lightdark);
+  @include lightColor(lg\:bg-, 0, 0, background-color, $lightdark);
+  @include initialColor(lg\:accent-, accent-color);
+  @include lightColor(lg\:accent-, 1, 10, accent-color, $colors);
+  @include lightColor(lg\:accent-, 0, 0, accent-color, $lightdark);
+  @include bggradient(lg\:);
+  @include bggradient(lg\:, $lightdark);
+  @include bgGradientToFrom(lg\:);
+  @include lightColor(lg\:text-decoration-, 1, 10, text-decoration-color, $colors);
+  @include lightColor(lg\:text-decoration-, 0, 0, text-decoration-color, $lightdark);
   // active and focus color classes
-  @include lightColor(dark\:lg\:text-decoration-, 1, 10, text-decoration-color, $colors, active);
-  @include lightColor(dark\:lg\:text-decoration-, 1, 10, text-decoration-color, $colors, focus);
-  @include initialColor(dark\:lg\:text-, color, active);
-  @include initialColor(dark\:lg\:text-, color, focus);
-  @include initialColor(dark\:lg\:bg-, background-color, active);
-  @include initialColor(dark\:lg\:bg-, background-color, focus);
-  @include lightColor(dark\:lg\:text-, 1, 10, color, $colors, active);
-  @include lightColor(dark\:lg\:text-, 1, 10, color, $colors, focus);
-  @include lightColor(dark\:lg\:bg-, 1, 10, background-color, $colors, active);
-  @include lightColor(dark\:lg\:bg-, 1, 10, background-color, $colors, focus);
-  @include lightColor(dark\:lg\:text-, 0, 0, color, $lightdark, active);
-  @include lightColor(dark\:lg\:text-, 0, 0, color, $lightdark, focus);
-  @include lightColor(dark\:lg\:bg-, 0, 0, background-color, $lightdark, active);
-  @include lightColor(dark\:lg\:bg-, 0, 0, background-color, $lightdark, focus);
-  @include lightColor(dark\:lg\:accent-, 1, 10, accent-color, $colors, active);
-  @include lightColor(dark\:lg\:accent-, 1, 10, accent-color, $colors, focus);
-  @include lightColor(dark\:lg\:accent-, 0, 0, accent-color, $lightdark, active);
-  @include lightColor(dark\:lg\:accent-, 0, 0, accent-color, $lightdark, focus);
-  @include initialColor(dark\:lg\:accent-, accent-color, active);
-  @include initialColor(dark\:lg\:accent-, accent-color, focus);
+  @include lightColor(lg\:text-decoration-, 1, 10, text-decoration-color, $colors, active);
+  @include lightColor(lg\:text-decoration-, 1, 10, text-decoration-color, $colors, focus);
+  @include initialColor(lg\:text-, color, active);
+  @include initialColor(lg\:text-, color, focus);
+  @include initialColor(lg\:bg-, background-color, active);
+  @include initialColor(lg\:bg-, background-color, focus);
+  @include lightColor(lg\:text-, 1, 10, color, $colors, active);
+  @include lightColor(lg\:text-, 1, 10, color, $colors, focus);
+  @include lightColor(lg\:bg-, 1, 10, background-color, $colors, active);
+  @include lightColor(lg\:bg-, 1, 10, background-color, $colors, focus);
+  @include lightColor(lg\:text-, 0, 0, color, $lightdark, active);
+  @include lightColor(lg\:text-, 0, 0, color, $lightdark, focus);
+  @include lightColor(lg\:bg-, 0, 0, background-color, $lightdark, active);
+  @include lightColor(lg\:bg-, 0, 0, background-color, $lightdark, focus);
+  @include lightColor(lg\:accent-, 1, 10, accent-color, $colors, active);
+  @include lightColor(lg\:accent-, 1, 10, accent-color, $colors, focus);
+  @include lightColor(lg\:accent-, 0, 0, accent-color, $lightdark, active);
+  @include lightColor(lg\:accent-, 0, 0, accent-color, $lightdark, focus);
+  @include initialColor(lg\:accent-, accent-color, active);
+  @include initialColor(lg\:accent-, accent-color, focus);
+  // custom colors
+  @include customColor(lg\:, text-, color);
+  @include customColor(lg\:, bg-, background-color);
+  @include customColor(lg\:, border-, border-color);
+  @include customColor(lg\:, fill-, fill);
+  @include customColor(lg\:, accent-, accent-color);
+  @include customColor(lg\:, text-decoration-, text-decoration-color);
 }
