fix(color): added custom black and white classes

--- a/scss/abstracts/variables/color/_variables.scss
+++ b/scss/abstracts/variables/color/_variables.scss
@@ -34,6 +34,8 @@ $customcolors: (
   'purple': --custom-dark-purple,
   'green': --custom-dark-green,
   'orange': --custom-dark-orange,
+  'black': --custom-dark-black,
+  'white': --custom-dark-white,
   'primary': --custom-dark-primary,
   'secondary': --custom-dark-secondary
 );
